rns-lang/tests/snapshots/lexer-integers-invalid_negative_format.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.code -5xyz

----- STDOUT -----

----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/lexer/integers/invalid_negative_format.ja:2:7 ]
   │
 2 │ .code -5xyz
   │       ──┬──  
   │         ╰──── '-5xyz' contains invalid characters
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
